@@ -5,6 +5,9 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug #72595 (php_output_handler_append illegal write access). (cmb)
 
+- CGI:
+  . Fixed bug #80849 (HTTP Status header truncation). (cmb)
+
 - Standard:
   . Fixed bug #72146 (Integer overflow on substr_replace). (cmb)
 
